--- a/templates/index.html
+++ b/templates/index.html
@@ -52,8 +52,8 @@
             url: "http://localhost:5000/thumbnail",
 
             data: {
-               //image: "http://127.0.0.1:5000/static/img/hero-300x169-v2.png",
-               image: "/Users/michaellawrence/Desktop/r8lst/pythumb/static/img/IMG_0017.JPG",
+               image: "http://127.0.0.1:5000/static/img/hero-300x169-v2.png",
+               //image: "/Users/michaellawrence/Desktop/r8lst/pythumb/static/img/IMG_0017.JPG",
                // type: "png",
                w: "200"
                // h: "100"
